--- a/src/app/bulls-and-cows/bulls-and-cows.component.html
+++ b/src/app/bulls-and-cows/bulls-and-cows.component.html
@@ -1,31 +1,41 @@
-<button type="button" class="btn btn-primary m-2" (click)="increment(0)">{{ guess[0] }}</button>
-<button type="button" class="btn btn-primary m-2" (click)="increment(1)">{{ guess[1] }}</button>
-<button type="button" class="btn btn-primary m-2" (click)="increment(2)">{{ guess[2] }}</button>
-<button type="button" class="btn btn-primary m-2" (click)="increment(3)">{{ guess[3] }}</button>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <button type="button" class="btn btn-danger m-3" (click)="startNewGame()">New Game</button>
+        </div>
+    </div>
 
-<button type="button" class="btn btn-success m-3" (click)="check()">I guess so!</button>
-<button type="button" class="btn btn-danger m-3" (click)="startNewGame()">New Game</button>
+    <div class="row">
+        <div class="col p-2">
+            <input class="bnc-num" type="number" [(ngModel)]="guess[0]" min="0" pattern="\d*">
+        </div>
+        <div class="col p-2">
+            <input class="bnc-num" type="number" [(ngModel)]="guess[1]" min="0" pattern="\d*">
+        </div>
+        <div class="col p-2">
+            <input class="bnc-num" type="number" [(ngModel)]="guess[2]" min="0" pattern="\d*">
+        </div>
+        <div class="col p-2">
+            <input class="bnc-num" type="number" [(ngModel)]="guess[3]" min="0" pattern="\d*">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <button type="button" class="btn btn-success m-3" (click)="check()">I guess so</button>
+        </div>
+    </div>
+</div>
 
 <div *ngIf="showDuplicates" class="alert alert-danger" role="alert">
     Duplicates are present
 </div>
 
 <ul *ngFor="let trail of trails" class="list-group">
-    <li class="list-group-item">
-        <div class="btn-group mr-2" role="group">
-            <button type="button" class="btn btn-secondary" disabled>{{ trail.guess[0] }}</button>
-            <button type="button" class="btn btn-secondary" disabled>{{ trail.guess[1] }}</button>
-            <button type="button" class="btn btn-secondary" disabled>{{ trail.guess[2] }}</button>
-            <button type="button" class="btn btn-secondary" disabled>{{ trail.guess[3] }}</button>
-        </div>
-        <div class="btn-group mr-2" role="group" aria-label="Second group">
-            <img class="img-responsive" src="assets/bull.png">
-            <button type="button" class="btn btn-info" disabled>{{ trail.bulls }}</button>
-        </div>
-        <div class="btn-group mr-2" role="group" aria-label="Second group">
-            <img class="img-responsive" src="assets/cow.png">
-            <button type="button" class="btn btn-info" disabled>{{ trail.cows }}</button>
-        </div>
+    <li class="list-group-item mb-2">
+        <p class="mb-0">{{ trail.guess[0] }} {{ trail.guess[1] }} {{ trail.guess[2] }} {{ trail.guess[3] }}</p>
+        <p class="mb-0">Bulls: {{ trail.bulls }} & Cows: {{ trail.cows }}</p>
+
         <div *ngIf="trail.bulls == 4" class="alert alert-success" role="alert">
             Great! You found it
         </div>
