--- a/src/app/bulls-and-cows/bulls-and-cows.component.html
+++ b/src/app/bulls-and-cows/bulls-and-cows.component.html
@@ -1,43 +1,41 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <button type="button" class="btn btn-danger m-3" (click)="startNewGame()">New Game</button>
-        </div>
-    </div>
+<div class="row">
+	<div class="col">
+		<button type="button" class="btn btn-danger m-3" (click)="startNewGame()">New Game</button>
+	</div>
+</div>
 
-    <div class="row">
-        <div class="col p-2">
-            <input class="bnc-num" type="number" [(ngModel)]="guess[0]" min="0" pattern="\d*">
-        </div>
-        <div class="col p-2">
-            <input class="bnc-num" type="number" [(ngModel)]="guess[1]" min="0" pattern="\d*">
-        </div>
-        <div class="col p-2">
-            <input class="bnc-num" type="number" [(ngModel)]="guess[2]" min="0" pattern="\d*">
-        </div>
-        <div class="col p-2">
-            <input class="bnc-num" type="number" [(ngModel)]="guess[3]" min="0" pattern="\d*">
-        </div>
-    </div>
+<div class="row">
+	<div class="col p-2">
+		<input class="bnc-num" type="number" [(ngModel)]="guess[0]" min="0" max="9" pattern="\d*" (keydown)="validate($event)" (focus)="$event.target.select()">
+	</div>
+	<div class="col p-2">
+		<input class="bnc-num" type="number" [(ngModel)]="guess[1]" min="0" max="9" pattern="\d*" (keydown)="validate($event)" (focus)="$event.target.select()">
+	</div>
+	<div class="col p-2">
+		<input class="bnc-num" type="number" [(ngModel)]="guess[2]" min="0" max="9" pattern="\d*" (keydown)="validate($event)" (focus)="$event.target.select()">
+	</div>
+	<div class="col p-2">
+		<input class="bnc-num" type="number" [(ngModel)]="guess[3]" min="0" max="9" pattern="\d*" (keydown)="validate($event)" (focus)="$event.target.select()">
+	</div>
+</div>
 
-    <div class="row">
-        <div class="col">
-            <button type="button" class="btn btn-success m-3" (click)="check()">I guess so</button>
-        </div>
-    </div>
+<div class="row">
+	<div class="col">
+		<button type="button" class="btn btn-success m-3" (click)="check()">I guess so</button>
+	</div>
 </div>
 
 <div *ngIf="showDuplicates" class="alert alert-danger" role="alert">
-    Duplicates are present
+	Duplicates are present
 </div>
 
 <ul *ngFor="let trail of trails" class="list-group">
-    <li class="list-group-item mb-2">
-        <p class="mb-0">{{ trail.guess[0] }} {{ trail.guess[1] }} {{ trail.guess[2] }} {{ trail.guess[3] }}</p>
-        <p class="mb-0">Bulls: {{ trail.bulls }} & Cows: {{ trail.cows }}</p>
+	<li class="list-group-item mb-2">
+		<p class="mb-0">{{ trail.guess[0] }} {{ trail.guess[1] }} {{ trail.guess[2] }} {{ trail.guess[3] }}</p>
+		<p class="mb-0">Bulls: {{ trail.bulls }} & Cows: {{ trail.cows }}</p>
 
-        <div *ngIf="trail.bulls == 4" class="alert alert-success" role="alert">
-            Great! You found it
-        </div>
-    </li>
+		<div *ngIf="trail.bulls == 4" class="alert alert-success" role="alert">
+			Great! You found it
+		</div>
+	</li>
 </ul>
