--- a/src/app/bulls-and-cows/bulls-and-cows.component.css
+++ b/src/app/bulls-and-cows/bulls-and-cows.component.css
@@ -1,6 +1,12 @@
 .bnc-num {
-  width: 45px;
+  width: 30px;
   text-align: center;
   font-size: 1em;
   font-weight: bold;
+}
+
+@media only screen and (min-width: 768px) {
+  .bnc-num {
+    width: 45px;
+  }
 }
