--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1>{{ gameTitle }}</h1>
-    <p class="lead">{{ gameDescription }}</p>
-  </div>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="">
+    <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top"> Games
+  </a>
 
-<div class="container text-center">
-  <app-bulls-and-cows></app-bulls-and-cows>
-</div>
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/bulls-and-cows"> Bulls & Cows </a>
+    <a class="nav-item nav-link" routerLink="/five-in-a-row"> 5 in a row </a>
+  </div>
+</nav>
+
+<router-outlet></router-outlet>
