--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="">
-    <img src="favicon.ico" width="30" height="30" class="d-inline-block align-top"> Games
-  </a>
-
-  <div class="navbar-nav">
-    <a class="nav-item nav-link" routerLink="/bulls-and-cows"> Bulls & Cows </a>
-    <a class="nav-item nav-link" routerLink="/five-in-a-row"> 5 in a row </a>
-  </div>
-</nav>
-
+<app-header></app-header>
 <router-outlet></router-outlet>
