--- a/src/app/five-in-a-row/five-in-a-row.component.html
+++ b/src/app/five-in-a-row/five-in-a-row.component.html
@@ -1,3 +1,3 @@
-<div class="container-fuild text-center">
-  <p class="banner"> Coming soon ... </p>
+<div class="container text-center">
+  Coming soon...
 </div>
